--- a/css/styles.css
+++ b/css/styles.css
@@ -473,7 +473,8 @@ a {
   max-width: 100%;
   max-height: 100%;
 }
-.img-avatar-frame {
+
+.img-frame {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -482,7 +483,8 @@ a {
   padding: 13px;
   border: 1px solid #ccc;
 }
-.img-avatar-logo {
+
+.img-logo {
   display: block;
   margin-left: auto;
   margin-right: auto;
