--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -3,20 +3,26 @@
 /* ============================================= */
 
 .img-avatar {
-    @include display-block;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 10px;
     max-width: 100%; 
-    max-height: 100%;
+    max-height: 100%
+}
   
-    &-frame {
-        @include display-block;
-        margin-top: 10px;
-        max-width: 100%;
-        padding: 13px;
-        border: 1px solid #ccc;
-    }
+.img-frame {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    max-width: 100%;
+    padding: 13px;
+    border: 1px solid #ccc;
+}
     
-    &-logo {
-        @include display-block;
-    }
+.img-logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
